--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@shopify/flash-list": "^1.6.3",
     "@tanstack/react-query": "^5.8.9",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.11.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-video": "^5.2.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-video": "^5.0.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
