--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@shopify/flash-list": "^1.6.3",
     "@tanstack/react-query": "^5.8.9",
+    "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.14.0",
