--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ require Pod::Executable.execute_command('node', ['-p',
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
+
+
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
 #
@@ -30,7 +32,41 @@ target 'app' do
 
   # Flags change depending on the env values.
   flags = get_default_flags()
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+  def node_require(script)# Resolve script with node to allow for hoisting
+     require Pod::Executable.execute_command('node', ['-p',
+       "require.resolve(
+         '#{script}',
+         {paths: [process.argv[1]]},
+       )", __dir__]).strip
+   end
 
+   node_require('react-native/scripts/react_native_pods.rb')
+   node_require('react-native-permissions/scripts/setup.rb')
+  
+setup_permissions([
+  # 'AppTrackingTransparency',
+  # 'BluetoothPeripheral',
+  # 'Calendars',
+  # 'Camera',
+  # 'Contacts',
+  # 'FaceID',
+  # 'LocationAccuracy',
+  # 'LocationAlways',
+  # 'LocationWhenInUse',
+  # 'MediaLibrary',
+  # 'Microphone',
+  # 'Motion',
+  # 'Notifications',
+   'PhotoLibrary',
+  # 'PhotoLibraryAddOnly',
+  # 'Reminders',
+  # 'Siri',
+  # 'SpeechRecognition',
+  # 'StoreKit',
+])
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
