--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "react-native start",
     "test": "jest"
   },
+  "reactNativePermissionsIOS": [
+    "MediaLibrary"
+  ],
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/native": "^6.1.9",
@@ -18,9 +21,12 @@
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.11.3",
+    "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-video": "^5.2.1",
