--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@tanstack/react-query": "^5.8.9",
     "axios": "^1.6.2",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.7",
+    "react-native-date-picker": "^4.3.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
