--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@shopify/flash-list": "^1.6.3",
     "@tanstack/react-query": "^5.8.9",
+    "aws-sdk": "^2.1511.0",
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
