--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "MediaLibrary"
   ],
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -28,11 +29,13 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.11.3",
     "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-video": "^5.2.1",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
