--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.11.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.11.3",
     "react-native-permissions": "^3.10.1",
