--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,7 +27,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'app' do
+target 'Turnt' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -81,7 +81,7 @@ setup_permissions([
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'appTests' do
+  target 'TurntTests' do
     inherit! :complete
     # Pods for testing
   end
