--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "MediaLibrary"
   ],
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@hookform/resolvers": "^3.3.2",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@shopify/flash-list": "^1.6.3",
@@ -33,8 +36,10 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.11.4",
     "react-native-permissions": "^3.10.1",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-track-player": "^4.0.1",
     "react-native-video": "^5.2.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
