--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
     "@hookform/resolvers": "^3.3.2",
+    "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-community/blur": "^4.3.2",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
