--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.7",
     "react-native-date-picker": "^4.3.3",
+    "react-native-document-picker": "^9.1.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
