--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-community/blur": "^4.3.2",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -42,6 +43,7 @@
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.1.0",
     "react-native-track-player": "^4.0.1",
     "react-native-video": "^5.2.1",
     "zod": "^3.22.4",
