--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,7 +28,9 @@ if linkage != nil
 end
 
 target 'Turnt' do
-  pod 'ffmpeg-kit-react-native', :subspecs => ['video-lts'], :podspec => '../node_modules/ffmpeg-kit-react-native/ffmpeg-kit-react-native.podspec'
+  pod 'ffmpeg-kit-react-native', :subspecs => ['full-lts'], :podspec => '../node_modules/ffmpeg-kit-react-native/ffmpeg-kit-react-native.podspec'
+
+
   config = use_native_modules!
 
   # Flags change depending on the env values.
