--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.7",
+    "react-native-bootsplash": "^5.2.1",
     "react-native-date-picker": "^4.3.3",
     "react-native-document-picker": "^9.1.0",
     "react-native-fs": "^2.20.0",
