--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "aws-sdk": "^2.1511.0",
     "axios": "^1.6.2",
     "ffmpeg-kit-react-native": "^6.0.2",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.7",
@@ -65,6 +66,7 @@
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.0.24",
     "@types/react-native-video": "^5.0.18",
     "@types/react-test-renderer": "^18.0.0",
