--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react-native-bootsplash": "^5.2.1",
     "react-native-date-picker": "^4.3.3",
     "react-native-document-picker": "^9.1.0",
+    "react-native-error-boundary": "^1.2.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-logs": "^5.0.1",
     "react-native-mmkv": "^2.11.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.11.4",
@@ -72,6 +74,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
