--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,10 @@
 {
-    "background.fullscreen": {
-      "images": ["file:///Users/dcnx/Project/app/.vscode/afcd9135282d5d8d6ddd24300feea69f.jpg"],
-  
-      "opacity": 0.97,
-      "size": "cover",
-      "position": "center",
-      "interval": 0
-    }
+  "background.fullscreen": {
+    "images": ["file:///Users/dcnx/Project/app/.vscode/wp4517351.jpg"],
+
+    "opacity": 0.97,
+    "size": "cover",
+    "position": "center",
+    "interval": 0
   }
-  
+}
