--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.2",
     "ffmpeg-kit-react-native": "^6.0.2",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^6.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.7",
