--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.0.1",
     "react-native-mmkv": "^2.11.0",
