--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "react-native-track-player": "^4.0.1",
     "react-native-video": "^5.2.1",
     "react-redux": "^9.0.4",
-    "recyclerlistview": "^4.2.0",
     "redux": "^5.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
@@ -73,14 +72,16 @@
     "@types/react": "^18.0.24",
     "@types/react-native-video": "^5.0.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=16"
